version/0.79/_sources/autoapi/pyedb/grpc/database/net/extended_net/ExtendedNet.rst.txt






:class:`ExtendedNet`
====================


.. py:class:: pyedb.grpc.database.net.extended_net.ExtendedNet(pedb, edb_object)

   
   Manages EDB functionalities for a primitives.
   It Inherits EDB Object properties.
















   ..
       !! processed by numpydoc !!



.. py:currentmodule:: ExtendedNet

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~create`
            - Create a extended net.



   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - Extended net name.
          * - :py:attr:`~nets`
            - Nets dictionary.
          * - :py:attr:`~components`
            - Dictionary of components.
          * - :py:attr:`~rlc`
            - Dictionary of RLC components.
          * - :py:attr:`~serial_rlc`
            - Dictionary of serial RLC components.
          * - :py:attr:`~shunt_rlc`
            - Dictionary of shunt RLC components.


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~core`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.grpc.database.net.extended_net import ExtendedNet

Property detail
---------------

.. py:property:: name

   
   Extended net name.





   :Returns:

       :class:`python:str`
           Extended net name.











   ..
       !! processed by numpydoc !!

.. py:property:: nets
   :type: dict[str, pyedb.grpc.database.net.net.Net]


   
   Nets dictionary.





   :Returns:

       :obj:`Dict`\[:class:`python:str`, :class:`Net <pyedb.grpc.database.net.net.Net>`]
           Dict[net name, Net object].











   ..
       !! processed by numpydoc !!

.. py:property:: components
   :type: dict[str, pyedb.grpc.database.hierarchy.component.Component]


   
   Dictionary of components.





   :Returns:

       :obj:`Dict`\[:class:`python:str`, :class:`Component <pyedb.grpc.database.hierarchy.component.Component>`].
           Dict[net name, Component object].











   ..
       !! processed by numpydoc !!

.. py:property:: rlc
   :type: dict[str, any]


   
   Dictionary of RLC components.





   :Returns:

       :obj:`Dict`\[:class:`python:str`, :class:`Component <pyedb.grpc.database.hierarchy.component.Component>`].
           Dict[net name, Component object].











   ..
       !! processed by numpydoc !!

.. py:property:: serial_rlc
   :type: dict[str, any]


   
   Dictionary of serial RLC components.





   :Returns:

       :obj:`Dict`\[:class:`python:str`, :class:`Component <pyedb.grpc.database.hierarchy.component.Component>`].
           Dict[net name, Component object].











   ..
       !! processed by numpydoc !!

.. py:property:: shunt_rlc
   :type: dict[str, any]


   
   Dictionary of shunt RLC components.





   :Returns:

       :obj:`Dict`\[:class:`python:str`, :class:`Component <pyedb.grpc.database.hierarchy.component.Component>`].
           Dict[net name, Component object].











   ..
       !! processed by numpydoc !!



Attribute detail
----------------

.. py:attribute:: core



Method detail
-------------

.. py:method:: create(layout, name)
   :classmethod:


   
   Create a extended net.


   :Parameters:

       **layout** : :class: <``Layout` pyedb.grpc.database.layout.layout.Layout>
           Layout object associated with the extended net.

       **name** : :class:`python:str`
           Name of the extended net.



   :Returns:

       :obj:`ExtendedNet`
           Extended net object.











   ..
       !! processed by numpydoc !!




